--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOVIES</title>
-    <link rel="stylesheet" href="./src/assets/scss/main.scss">
-    <script src="./src/assets/js/main.js"></script>
+    <link rel="stylesheet" href="./src/scss/main.scss">
+    <script src="./src/js/main.js"></script>
 </head>
 <body>
 
